--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,10 +1,10 @@
 @import '~@angular/material/theming';
+
 $custom-typography: mat-typography-config(
-  $font-family: 'Roboto Regular, Segoe UI, Tahoma, Geneva, Verdana, sans-serif'
+  $font-family: 'Roboto Regular, Segoe UI, Tahoma, Geneva, Verdana, sans-serif',
 );
 
 @include mat-core($custom-typography);
-
 
 $app-primary: mat-palette($mat-grey);
 $app-accent: mat-palette($mat-grey, A200, A100, A400);
